[gd_scene load_steps=8 format=3 uid="uid://ck34trga36w3"]

[ext_resource type="Script" path="res://ui.gd" id="1_bhicx"]
[ext_resource type="Script" path="res://manager.gd" id="2_qn4ti"]
[ext_resource type="Script" path="res://inventory.gd" id="3_362i1"]
[ext_resource type="PackedScene" uid="uid://dryra2oqvkefx" path="res://slot.tscn" id="4_uyso4"]
[ext_resource type="Script" path="res://shop.gd" id="5_mdeu6"]
[ext_resource type="PackedScene" uid="uid://b1tts0yfudpdg" path="res://statsdisplay.tscn" id="6_85g5e"]

[sub_resource type="LabelSettings" id="LabelSettings_lup7p"]
font_size = 8

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_bhicx")

[node name="Manager" type="Panel" parent="."]
visible = false
offset_right = 983.0
offset_bottom = 604.0
script = ExtResource("2_qn4ti")

[node name="Inventory" type="GridContainer" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 255.0
offset_top = 11.0
offset_right = 815.0
offset_bottom = 411.0
columns = 3
script = ExtResource("3_362i1")

[node name="Slot" parent="Manager/Inventory" instance=ExtResource("4_uyso4")]
layout_mode = 2
slot_type = 0

[node name="Label2" type="Label" parent="Manager/Inventory/Slot"]
layout_mode = 2
size_flags_vertical = 1
text = "Weapon"
label_settings = SubResource("LabelSettings_lup7p")

[node name="Slot2" parent="Manager/Inventory" instance=ExtResource("4_uyso4")]
layout_mode = 2
tooltip_text = "Weapon
"
slot_type = 1

[node name="Label2" type="Label" parent="Manager/Inventory/Slot2"]
layout_mode = 2
size_flags_vertical = 1
text = "Armor"
label_settings = SubResource("LabelSettings_lup7p")

[node name="Slot3" parent="Manager/Inventory" instance=ExtResource("4_uyso4")]
layout_mode = 2
tooltip_text = "Weapon
"
slot_type = 2

[node name="Label2" type="Label" parent="Manager/Inventory/Slot3"]
layout_mode = 2
size_flags_vertical = 1
text = "Accessory"
label_settings = SubResource("LabelSettings_lup7p")

[node name="Shop" type="GridContainer" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 150.0
offset_top = 282.0
offset_right = 666.0
offset_bottom = 486.0
columns = 5
script = ExtResource("5_mdeu6")

[node name="Slot" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot2" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot3" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot4" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot5" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot6" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot7" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot8" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot9" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="Slot10" parent="Manager/Shop" instance=ExtResource("4_uyso4")]
layout_mode = 2

[node name="RerollButton" type="Button" parent="Manager"]
layout_mode = 2
offset_left = 30.0
offset_top = 398.0
offset_right = 122.0
offset_bottom = 429.0
text = "Reroll"

[node name="CloseButton" type="Button" parent="Manager"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Next wave"

[node name="StatsDisplay" parent="Manager" instance=ExtResource("6_85g5e")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 254.0
offset_top = 138.0
offset_right = 428.0
offset_bottom = 273.0

[node name="knight_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 46.0
offset_top = 108.0
offset_right = 183.0
offset_bottom = 139.0
text = "Knight Inventory"

[node name="valkyrie_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 46.0
offset_top = 147.0
offset_right = 195.0
offset_bottom = 178.0
text = "Valkyrie Inventory"

[node name="wizard_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 46.0
offset_top = 225.0
offset_right = 195.0
offset_bottom = 256.0
text = "Wizard Inventory"

[node name="cleric_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 47.0
offset_top = 186.0
offset_right = 177.0
offset_bottom = 217.0
text = "Cleric Inventory"

[node name="Inventory_switch" type="Panel" parent="."]
visible = false
offset_left = 183.0
offset_top = 37.0
offset_right = 244.0
offset_bottom = 77.0

[node name="ativechar" type="Button" parent="Inventory_switch"]
layout_mode = 0
offset_left = 1.0
offset_top = 5.0
offset_right = 59.0
offset_bottom = 36.0
text = "knight"

[node name="Currency" type="HBoxContainer" parent="."]
offset_left = 47.0
offset_top = 339.0
offset_right = 97.0
offset_bottom = 379.0

[node name="Label" type="Label" parent="Currency"]
layout_mode = 2
text = "Gold"

[node name="Balance" type="Label" parent="Currency"]
unique_name_in_owner = true
layout_mode = 2

[node name="SkillPanel" type="Panel" parent="."]
offset_left = 51.0
offset_top = 6.0
offset_right = 703.0
offset_bottom = 476.0

[node name="SkillPopupKnight" type="HBoxContainer" parent="SkillPanel"]
layout_mode = 0
offset_left = 55.0
offset_top = 6.0
offset_right = 304.0
offset_bottom = 86.0
alignment = 1

[node name="KnightButton1" type="Button" parent="SkillPanel/SkillPopupKnight"]
layout_mode = 2
size_flags_horizontal = 0
text = "Shield Bashing"

[node name="KnightButton2" type="Button" parent="SkillPanel/SkillPopupKnight"]
layout_mode = 2
size_flags_horizontal = 0

[node name="KnightButton3" type="Button" parent="SkillPanel/SkillPopupKnight"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SkillPopupCleric" type="HBoxContainer" parent="SkillPanel"]
layout_mode = 0
offset_left = 55.0
offset_top = 230.0
offset_right = 95.0
offset_bottom = 270.0
alignment = 1

[node name="ClericButton1" type="Button" parent="SkillPanel/SkillPopupCleric"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ClericButton2" type="Button" parent="SkillPanel/SkillPopupCleric"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ClericButton3" type="Button" parent="SkillPanel/SkillPopupCleric"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SkillPopupValkyrie" type="HBoxContainer" parent="SkillPanel"]
layout_mode = 0
offset_left = 55.0
offset_top = 118.0
offset_right = 95.0
offset_bottom = 158.0
alignment = 1

[node name="ValkyrieButton1" type="Button" parent="SkillPanel/SkillPopupValkyrie"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ValkyrieButton2" type="Button" parent="SkillPanel/SkillPopupValkyrie"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ValkyrieButton3" type="Button" parent="SkillPanel/SkillPopupValkyrie"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SkillPopupWizard" type="HBoxContainer" parent="SkillPanel"]
layout_mode = 0
offset_left = 55.0
offset_top = 342.0
offset_right = 95.0
offset_bottom = 382.0
alignment = 1

[node name="WizardButton1" type="Button" parent="SkillPanel/SkillPopupWizard"]
layout_mode = 2
size_flags_horizontal = 0

[node name="WizardButton2" type="Button" parent="SkillPanel/SkillPopupWizard"]
layout_mode = 2
size_flags_horizontal = 0

[node name="WizardButton3" type="Button" parent="SkillPanel/SkillPopupWizard"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ConfirmButton" type="Button" parent="SkillPanel"]
layout_mode = 0
offset_left = 517.0
offset_top = 429.0
offset_right = 653.0
offset_bottom = 460.0
text = "Back to Game"

[connection signal="pressed" from="Manager/RerollButton" to="Manager/Shop" method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Manager/CloseButton" to="Manager/Shop" method="_on_close_button_pressed"]
[connection signal="pressed" from="knight_button" to="." method="_on_knight_button_pressed"]
[connection signal="pressed" from="valkyrie_button" to="." method="_on_valkyrie_button_pressed"]
[connection signal="pressed" from="wizard_button" to="." method="_on_wizard_button_pressed"]
[connection signal="pressed" from="cleric_button" to="." method="_on_cleric_button_pressed"]
[connection signal="pressed" from="SkillPanel/ConfirmButton" to="." method="_on_confirm_button_pressed"]
